2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.addin.xml,
	  MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs,
	  MonoDevelop.GtkCore/GtkCoreService.cs,
	  MonoDevelop.GtkCore/WidgetFileTemplatePartialClass.cs,
	  MonoDevelop.GtkCore/WidgetFileTemplateFullClass.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CodeBinder.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs,
	  MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs,
	  templates/WidgetPartial.xft.xml, templates/Widget.xft.xml,
	  templates/WindowPartial.xft.xml, templates/Window.xft.xml,
	  templates/ActionGroupPartial.xft.xml,
	  templates/ActionGroup.xft.xml, templates/DialogPartial.xft.xml,
	  templates/Dialog.xft.xml: Implemented support for generating code
	  in partial classes.
	* MonoDevelop.GtkCore.NodeBuilders/WidgetNodeBuilder.cs: Use the
	  correct method for saving the project.
	* MonoDevelop.GtkCore.NodeBuilders/WindowsFolder.cs: Refresh the user
	  interface folder when the gui project is reloaded.
	* MonoDevelop.GtkCore.mdp: Updated.
	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Added support for partial
	  classes. In the GuiBuilderProject property, don't update the
	  gtk-gui folder since this call may change the contents of the
	  project, and weird things happen when called by the project pad to
	  fill the tree.
	* lib/libsteticui.dll, lib/libstetic.dll: Updated from stetic module.
	* Makefile.am: Added new files.
	* MonoDevelop.GtkCore.WidgetLibrary/BaseWidgetLibrary.cs,
	  MonoDevelop.GtkCore.WidgetLibrary/AssemblyReferenceWidgetLibrary.cs:
	  Make it work even when the assembly it references has been deleted
	  (maybe as a result of cleaning a project). In this case the widget
	  library is shown as empty.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs,
	  MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Added support
	  for Loading/Unloading a project, to optimize use of memory for