@@ -1,3 +1,8 @@
+2007-01-17  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderView.cs: Don't crash if the
+	  designer can't be loaded for some reason.
+
 2007-01-15  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.GtkCore.addin.xml,
